tests/samples/edge/invalid-syntax/broken.js
function broken( {
  const x = 
  if (true
    console.log("syntax error"
}